Fix amount alignment

--- a/src/balances/mtBalancesView.scss
+++ b/src/balances/mtBalancesView.scss
@@ -284,3 +284,9 @@ button.actionButton {
     margin-right: 12px;
   }
 }
+
+.amountCurrency {
+  display: inline-block;
+  min-width: 48px;
+  text-align: right;
+}
